[gd_scene load_steps=17 format=2]

[ext_resource path="res://Thwomp.gd" type="Script" id=1]
[ext_resource path="res://sprites/thwomp.png" type="Texture" id=2]
[ext_resource path="res://sprites/thwomp_wink_right.png" type="Texture" id=3]
[ext_resource path="res://sprites/thwomp_move_left.png" type="Texture" id=4]
[ext_resource path="res://sprites/thwomp_wink_left.png" type="Texture" id=5]
[ext_resource path="res://sprites/thwomp_move_right.png" type="Texture" id=6]
[ext_resource path="res://sprites/thwomp_look_up.png" type="Texture" id=7]
[ext_resource path="res://sprites/thwomp_move_up.png" type="Texture" id=8]
[ext_resource path="res://sprites/thwomp_look_down.png" type="Texture" id=9]
[ext_resource path="res://sprites/thwomp_move_down.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 500, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 500, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 500 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 500 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": false,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "down",
"speed": 5.0
} ]

[node name="Thwomp" type="KinematicBody2D"]
position = Vector2( 448, 352 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="LeftRayCast" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( -1000, 0 )

[node name="RightRayCast" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 1000, 0 )

[node name="UpRayCast" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 0, -1000 )

[node name="DownRayCast" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 0, 1000 )

[node name="LeftSight" type="Area2D" parent="."]

[node name="LeftArea" type="CollisionShape2D" parent="LeftSight"]
position = Vector2( -532, 0 )
shape = SubResource( 2 )

[node name="RightSight" type="Area2D" parent="."]

[node name="RightArea" type="CollisionShape2D" parent="RightSight"]
position = Vector2( 532, 0 )
shape = SubResource( 3 )

[node name="UpSight" type="Area2D" parent="."]

[node name="UpArea" type="CollisionShape2D" parent="UpSight"]
position = Vector2( 0, -532 )
shape = SubResource( 4 )

[node name="DownSight" type="Area2D" parent="."]

[node name="DownArea" type="CollisionShape2D" parent="DownSight"]
position = Vector2( 0, 532 )
shape = SubResource( 5 )

[node name="Anim" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "right"

[node name="SfxPlayer" type="AudioStreamPlayer2D" parent="."]
